argocd-apps/microservices-sample/base/web/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
spec:
  ingressClassName: kong
  rules:
    - host: sample-app.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: web-service
                port: 
                  number: 80

    - host: sample-app.local
      http:
        paths:
          - path: /assets/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: web-service
                port: 
                  number: 81
